Updated terraform-check yml file

--- a/.github/workflows/terraform-check.yml
+++ b/.github/workflows/terraform-check.yml
@@ -1,12 +1,12 @@
 # Make sure to add AWS credentials as repository secrets in GitHub:
-#     AWS_SECRET_ACCESS_KEY
 #     AWS_ACCESS_KEY_ID
+#     AWS_SECRET_ACCESS_KEY
 
-name: Terraform
+name: Terraform CICD
 on:
-  push:
+  push: # run on git push
+  pull_request: # run on open pull request
     branches: [main]
-  pull_request:
 
 jobs:
   terraform:
@@ -14,8 +14,15 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      - name: Checkout
+      - name: Checkout Repo
         uses: actions/checkout@v2
+
+      - name: Configure AWS cerdentials
+        uses: aws-actions/configure-aws-credentials@v1
+        with:
+          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
+          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+          aws-region: us-east-1
 
       - name: Setup Terraform
         uses: hashicorp/setup-terraform@v1
