--- a/.github/workflows/terraform-check.yml
+++ b/.github/workflows/terraform-check.yml
@@ -27,12 +27,32 @@ jobs:
       - name: Setup Terraform
         uses: hashicorp/setup-terraform@v1
 
-      - name: Terraform Init
-        run: terraform init
+      # To check that this preparation steps in the job workflow are running
+      # properly up to now
+      - name: Clean up the spacing format of the tf code
+        uses: terraform fmt-check
 
-      - name: Terraform Plan
-        run: terraform plan
+      - name: Validate the resources to create
+        uses: terraform validate -no-color
 
-      - name: Terraform Apply
-        if: github.ref == 'refs/heads/main' && github.event_name == 'push'
-        run: terraform apply -auto-approve
+      - name: Check the tf code for programmatic and stylistic errors
+        uses: terraform-linters/setup-tflint@v3
+        with:
+          tflint_version: latest
+
+      - name: Show the version installed
+        run: tflint --version
+
+      - name: Init TFLinit
+        run: tflinit --init
+
+      - name: Run TFLint
+        run: tflinit -f compact
+#      - name: Terraform Init
+#        run: terraform init
+
+#      - name: Terraform Plan
+#        run: terraform plan
+
+#      - name: Terraform Apply
+#        run: terraform apply -auto-approve
