--- a/.github/workflows/terraform-check.yml
+++ b/.github/workflows/terraform-check.yml
@@ -19,23 +19,18 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v4.1.7
 
-      - name: Configure AWS cerdentials
-        uses: aws-actions/configure-aws-credentials@v1
+      - name: Configure AWS credentials
+        uses: aws-actions/configure-aws-credentials@v4.0.2
         with:
           aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
           aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
           aws-region: us-east-1
 
       - name: Setup Terraform
-        uses: hashicorp/setup-terraform@v1
+        uses: hashicorp/setup-terraform@v3
 
       # To check that this preparation steps in the job workflow are running
       # properly up to now
-      - name: Clean up the spacing format of the tf code
-        uses: terraform fmt-check
-
-      - name: Validate the resources to create
-        uses: terraform validate -no-color
 
       - name: Check the tf code for programmatic and stylistic errors
         uses: terraform-linters/setup-tflint@v3
@@ -51,11 +46,22 @@ jobs:
       - name: Run TFLint
         run: tflinit -f compact
 
-      # - name: Terraform Init
-      #   run: terraform init
+      - name: Clean up the spacing format of the tf code
+        run: terraform fmt-check
+        continue-on-error: true
 
-      # - name: Terraform Plan
-      #  run: terraform plan
+      - name: Terraform Init
+        run: terraform init
 
-      # - name: Terraform Apply
-      #  run: terraform apply -auto-approve
+      - name: Terraform Validate
+        run: terraform validate -no-color
+
+      - name: Terraform Plan
+        run: terraform plan -no-color
+        # run: echo ${{ steps.plan.outputs.stdout }}
+        # run: echo ${{ steps.plan.outputs.stderr }}
+        # run: echo ${{ steps.plan.outputs.exitcode }}
+        continue-on-error: true
+
+      - name: Terraform Apply
+        run: terraform apply -auto-approve
