--- a/.github/workflows/terraform-check.yml
+++ b/.github/workflows/terraform-check.yml
@@ -41,10 +41,10 @@ jobs:
         run: tflint --version
 
       - name: Init TFLinit
-        run: tflinit --init
+        run: tflint --init
 
       - name: Run TFLint
-        run: tflinit -f compact
+        run: tflint -f compact
 
       - name: Clean up the spacing format of the tf code
         run: terraform fmt-check
@@ -63,5 +63,5 @@ jobs:
         # run: echo ${{ steps.plan.outputs.exitcode }}
         continue-on-error: true
 
-      - name: Terraform Apply
-        run: terraform apply -auto-approve
+      #- name: Terraform Apply
+      # run: terraform apply -auto-approve
