--- a/.github/workflows/terraform-check.yml
+++ b/.github/workflows/terraform-check.yml
@@ -47,7 +47,7 @@ jobs:
         run: tflint -f compact
 
       - name: Clean up the spacing format of the tf code
-        run: terraform fmt-check
+        run: terraform fmt -check
         continue-on-error: true
 
       - name: Terraform Init
@@ -57,11 +57,11 @@ jobs:
         run: terraform validate -no-color
 
       - name: Terraform Plan
-        run: terraform plan -no-color
+        run: terraform -chdir=terraform plan -no-color
         # run: echo ${{ steps.plan.outputs.stdout }}
         # run: echo ${{ steps.plan.outputs.stderr }}
         # run: echo ${{ steps.plan.outputs.exitcode }}
         continue-on-error: true
 
       #- name: Terraform Apply
-      # run: terraform apply -auto-approve
+      # run: terraform -chdir=terraform apply -auto-approve
