--- a/.github/workflows/terraform-check.yml
+++ b/.github/workflows/terraform-check.yml
@@ -51,17 +51,17 @@ jobs:
         continue-on-error: true
 
       - name: Terraform Init
-        run: terraform -chdir=./terraform init
+        run: terraform init
 
       - name: Terraform Validate
-        run: terraform -chdir=.terraform validate -no-color
+        run: terraform validate -no-color
 
       - name: Terraform Plan
-        run: terraform -chdir=./terraform plan -no-color
+        run: terraform plan -no-color
         # run: echo ${{ steps.plan.outputs.stdout }}
         # run: echo ${{ steps.plan.outputs.stderr }}
         # run: echo ${{ steps.plan.outputs.exitcode }}
         continue-on-error: true
 
       #- name: Terraform Apply
-      # run: terraform -chdir=./terraform apply -auto-approve
+      # run: terraform apply -auto-approve
