Created new develop branch for addition of new AWS SNS topic resource and new tf state file for this new repo

--- a/.github/workflows/terraform-check.yml
+++ b/.github/workflows/terraform-check.yml
@@ -1,8 +1,4 @@
-# Make sure to add AWS credentials as repository secrets in GitHub:
-#     AWS_ACCESS_KEY_ID
-#     AWS_SECRET_ACCESS_KEY
-
-# Getting ready to test the workflow run on Push event = round 1
+# Getting ready to test the workflow run on Push and Pull Request events
 
 name: Terraform CICD
 on:
